<resources>
    <string name="app_name">蓝猫</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="find_pwd">找回密码</string>
    <string name="register">注册</string>
    <string name="input_accout">请输入账号</string>
    <string name="input_pwd">请输入密码</string>
    <string name="login">登陆</string>
    <string name="get_code">获取\n验证码</string>
    <string name="input_code">请输入验证码</string>
    <string name="cancel">取消</string>
    <string name="commit">提交</string>

    <string name="video">视频</string>
    <string name="message">消息</string>
    <string name="discover">发现</string>
    <string name="me">我</string>

    <string name="about_us">关于我们</string>
    <string name="logout">退出登陆</string>


    <string name="lv1">管理员</string>

    <string name="add">添加</string>

    <string name="scan_title">扫描二维码</string>
    <string name="unlawfulness_sn">非法的sn号</string>
    <string name="login_failed">登陆失败</string>
    <string name="connect_server_failed">连接服务器失败</string>
    <string name="adapter_holder_params_err">shit,AdapterHolder不要乱传参数</string>
    <string name="not_use_device">不在使用该设备</string>
    <string name="device_name">设备名称</string>
    <string name="device_id">设备ID</string>
    <string name="unbind_failed">解绑失败</string>
    <string name="failed">失败</string>
    <string name="success">成功</string>
    <string name="bind">绑定</string>
    <string name="unbind">解绑</string>
    <string name="double_exit_app">再按一次退出app</string>
    <string name="full_screen_btn">全屏切换按钮</string>
    <string name="network_not_use">当前网络不可用</string>
    <string name="title_activity_main2">Main2Activity</string>
</resources>
