<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable name="user" type="com.tongge.ui.login.model.UserBean"/>
        <variable name="userEvent" type="com.tongge.ui.login.adapter.LoginEventModel"/>
    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:focusableInTouchMode="true"
        tools:context="com.tongge.ui.login.views.fragments.LoginFragment">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/register_username_area"
            android:layout_width="@dimen/dp_250"
            android:layout_height="@dimen/dp_40"
            android:layout_marginTop="@dimen/dp_20"
            android:textColorHint="@color/oldlace"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <EditText
                android:id="@+id/register_username_et"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawableLeft="@mipmap/left_user"
                android:drawablePadding="@dimen/dp_5"
                android:hint="@string/input_accout"
                android:text="@={user.username}"
                android:inputType="phone"
                android:textColor="@android:color/white"
                android:theme="@style/LoginEditTextTheme"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/register_code_area"
            android:layout_width="@dimen/dp_200"
            android:layout_height="@dimen/dp_40"
            android:textColorHint="@color/oldlace"
            android:layout_marginTop="@dimen/dp_20"
            app:layout_constraintStart_toStartOf="@+id/register_username_area"
            app:layout_constraintTop_toBottomOf="@+id/register_username_area">
            <EditText
                android:id="@+id/register_code_et"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawableLeft="@mipmap/left_code"
                android:drawablePadding="@dimen/dp_5"
                android:hint="@string/input_code"
                android:text="@={user.code}"
                android:textColor="@android:color/white"
                android:theme="@style/LoginEditTextTheme"/>
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/register_code_btn"
            android:layout_width="@dimen/dp_50"
            android:layout_height="@dimen/dp_40"
            android:theme="@style/NoBackWhiteText"
            android:background="@null"
            android:text="@string/get_code"
            android:layout_marginTop="@dimen/dp_20"
            android:onClick="@{userEvent.requestCode}"
            app:layout_constraintStart_toEndOf="@+id/register_code_area"
            app:layout_constraintTop_toBottomOf="@+id/register_username_area"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/register_pwd_area"
            android:layout_width="@dimen/dp_250"
            android:layout_height="@dimen/dp_40"
            android:layout_marginTop="@dimen/dp_20"
            android:textColorHint="@color/oldlace"
            app:layout_constraintStart_toStartOf="@+id/register_username_area"
            app:layout_constraintTop_toBottomOf="@+id/register_code_area">
            <EditText
                android:id="@+id/register_pwd_et"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawableLeft="@mipmap/left_pwd"
                android:drawablePadding="@dimen/dp_5"
                android:hint="@string/input_pwd"
                android:text="@={user.password}"
                android:inputType="textPassword"
                android:textColor="@android:color/white"
                android:theme="@style/LoginEditTextTheme"/>
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/register_btn"
            android:layout_width="@dimen/dp_250"
            android:layout_height="@dimen/dp_60"
            android:layout_marginTop="@dimen/dp_20"
            android:background="@drawable/selector_no_back_round_btn"
            android:gravity="center"
            android:text="@string/register"
            android:theme="@style/NoBackWhiteText"
            android:onClick="@{userEvent.register}"
            app:layout_constraintEnd_toEndOf="@+id/register_pwd_area"
            app:layout_constraintStart_toStartOf="@+id/register_pwd_area"
            app:layout_constraintTop_toBottomOf="@+id/register_pwd_area"/>

        <Button
            android:id="@+id/register_cancel_btn"
            android:layout_width="@dimen/dp_250"
            android:layout_height="@dimen/dp_60"
            android:layout_marginTop="@dimen/dp_10"
            android:background="@drawable/selector_no_back_round_btn"
            android:gravity="center"
            android:text="@string/cancel"
            android:theme="@style/NoBackWhiteText"
            android:onClick="@{()->userEvent.switchPager(1)}"
            app:layout_constraintEnd_toEndOf="@+id/register_btn"
            app:layout_constraintStart_toStartOf="@+id/register_btn"
            app:layout_constraintTop_toBottomOf="@+id/register_btn"/>

    </android.support.constraint.ConstraintLayout>
</layout>